--- a/index.html
+++ b/index.html
@@ -25,6 +25,40 @@
 	</head>
 
 	<body>
+		<header>
+			<nav class="navbar shadow-lg">
+				<div class="container-fluid">
+					<div class="wrapper">
+						<a href="#" class="icon"
+							><img src="https://iranroleplay.com/images/logo.png" alt="Irrp-Icon"
+						/></a>
+						<a href="#" class="dark-icon"><i class="fa-solid fa-circle-half-stroke"></i></a>
+					</div>
+					<ul class="nav justify-content-center">
+						<li class="nav-item">
+							<a class="nav-link" href="#">
+								<i class="fa-solid fa-circle-question"></i> چگونه بازی کنیم</a
+							>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#"> <i class="fa fa-receipt"></i> قوانین</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#"><i class="fa-brands fa-discord"></i> دیسکورد</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#"
+								><i class="fa-solid fa-clipboard-list"></i> انجمن</a
+							>
+						</li>
+					</ul>
+					<button class="btn btn-dark shadow" type="button">
+						<i class="fab fa-steam"></i> ورود به اپ
+					</button>
+				</div>
+			</nav>
+		</header>
+		
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
