Add gitIgnore file and formatting index codes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 						<a href="#" class="icon"
 							><img src="https://iranroleplay.com/images/logo.png" alt="Irrp-Icon"
 						/></a>
-						<a href="#" class="dark-icon"><i class="fa-solid fa-circle-half-stroke"></i></a>
+						<a href="#" class="dark-icon"
+							><i class="fa-solid fa-circle-half-stroke"></i
+						></a>
 					</div>
 					<ul class="nav justify-content-center">
 						<li class="nav-item">
@@ -44,7 +46,9 @@
 							<a class="nav-link" href="#"> <i class="fa fa-receipt"></i> قوانین</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#"><i class="fa-brands fa-discord"></i> دیسکورد</a>
+							<a class="nav-link" href="#"
+								><i class="fa-brands fa-discord"></i> دیسکورد</a
+							>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#"
@@ -58,7 +62,7 @@
 				</div>
 			</nav>
 		</header>
-		
+
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
