--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<i class="fab fa-steam"></i> ورود به اپ
 				</button>
 			</div>
-			<nav class="navbar navbar-light shadow-lg">
+			<nav class="navbar navbar-light shadow-lg fixed-top">
 				<div class="container-fluid">
 					<div class="wrapper">
 						<a href="#" class="icon"
@@ -97,7 +97,6 @@
 				</div>
 			</nav>
 		</header>
-
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
