--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 					<i class="fab fa-steam"></i> ورود به اپ
 				</button>
 			</div>
+			<div class="side-menu-overlay">
+			</div>
 			<nav class="navbar navbar-light shadow-lg fixed-top">
 				<div class="container-fluid">
 					<div class="wrapper">
