--- a/index.html
+++ b/index.html
@@ -26,13 +26,43 @@
 	</head>
 
 	<body>
-		<header>
-			<div class="side-menu">
-				<a href="#" class="icon mx-auto my-2"
-					><img src="https://iranroleplay.com/images/logo.png" alt="Irrp-Icon"
-				/></a>
+		<div class="side-menu">
+			<a href="#" class="icon mx-auto my-2"
+				><img src="https://iranroleplay.com/images/logo.png" alt="Irrp-Icon"
+			/></a>
 
-				<ul class="m-0 p-0">
+			<ul class="m-0 p-0">
+				<li class="nav-item">
+					<a class="nav-link" href="#">
+						<i class="fa-solid fa-circle-question"></i> چگونه بازی کنیم</a
+					>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#"> <i class="fa fa-receipt"></i> قوانین</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#"><i class="fa-brands fa-discord"></i> دیسکورد</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#"
+						><i class="fa-solid fa-clipboard-list"></i> انجمن</a
+					>
+				</li>
+			</ul>
+			<button class="btn btn-dark shadow" type="button">
+				<i class="fab fa-steam"></i> ورود به اپ
+			</button>
+		</div>
+		<div class="side-menu-overlay"></div>
+		<nav class="navbar navbar-light shadow-lg">
+			<div class="container-fluid">
+				<div class="wrapper">
+					<a href="#" class="icon"
+						><img src="https://iranroleplay.com/images/logo.png" alt="Irrp-Icon"
+					/></a>
+					<a href="#" class="dark-icon"><i class="fa-solid fa-circle-half-stroke"></i></a>
+				</div>
+				<ul class="nav justify-content-center">
 					<li class="nav-item">
 						<a class="nav-link" href="#">
 							<i class="fa-solid fa-circle-question"></i> چگونه بازی کنیم</a
@@ -52,53 +82,44 @@
 						>
 					</li>
 				</ul>
-				<button class="btn btn-dark shadow" type="button">
+				<button class="btn btn-dark shadow m-2" type="button">
 					<i class="fab fa-steam"></i> ورود به اپ
 				</button>
+				<button class="btn btn-light menu-btn shadow">
+					<span class="line"></span>
+					<span class="line"></span>
+					<span class="line"></span>
+				</button>
 			</div>
-			<div class="side-menu-overlay">
-			</div>
-			<nav class="navbar navbar-light shadow-lg fixed-top">
-				<div class="container-fluid">
-					<div class="wrapper">
-						<a href="#" class="icon"
-							><img src="https://iranroleplay.com/images/logo.png" alt="Irrp-Icon"
-						/></a>
-						<a href="#" class="dark-icon"
-							><i class="fa-solid fa-circle-half-stroke"></i
-						></a>
+		</nav>
+		<div class="page-header">
+			<div class="page-header-content py-5">
+				<div class="container">
+					<div class="row align-items-center text-center">
+						<div class="col-12 col-md-6 header-image">
+							<img src="/assets/images/irrpChars.png" alt="#" />
+						</div>
+						<div class="col-12 col-md-6 text-light header-descroption">
+							<h1>ایران رول پلی</h1>
+							<p mb-1>
+								تجربه متفاوت از نقش آفرینی. در شغل های آزاد یا دولتی شروع به کار
+								کنید و سبک متفاوتی از بازی آنلاین رو تجربه کنید <br />
+								برای ورود به سرور بر روی دکمه <i class="fa fa-play"></i> کلیلک کنید.
+							</p>
+							<h3 class="row justify-content-center align-items-center">
+								<div class="wrapper d-flex justify-content-center align-items-center">
+									<a class="col-auto btn-dark rounded-circle play-btn mx-3" href="#">
+										<i class="fa fa-play"></i>
+									</a>
+									<span class="col-auto counter">70/128</span>
+								</div>
+							</h3>
+						</div>
 					</div>
-					<ul class="nav justify-content-center">
-						<li class="nav-item">
-							<a class="nav-link" href="#">
-								<i class="fa-solid fa-circle-question"></i> چگونه بازی کنیم</a
-							>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#"> <i class="fa fa-receipt"></i> قوانین</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#"
-								><i class="fa-brands fa-discord"></i> دیسکورد</a
-							>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#"
-								><i class="fa-solid fa-clipboard-list"></i> انجمن</a
-							>
-						</li>
-					</ul>
-					<button class="btn btn-dark shadow m-2" type="button">
-						<i class="fab fa-steam"></i> ورود به اپ
-					</button>
-					<button class="btn btn-light menu-btn shadow">
-						<span class="line"></span>
-						<span class="line"></span>
-						<span class="line"></span>
-					</button>
 				</div>
-			</nav>
-		</header>
+			</div>
+		</div>
+
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
