--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 				</button>
 			</div>
 		</nav>
-		<div class="page-header">
-			<div class="page-header-content py-5">
+		<header class="page-header">
+			<div class="page-header-content pt-5">
 				<div class="container">
 					<div class="row align-items-center text-center">
 						<div class="col-12 col-md-6 header-image">
@@ -107,19 +107,87 @@
 								برای ورود به سرور بر روی دکمه <i class="fa fa-play"></i> کلیلک کنید.
 							</p>
 							<h3 class="row justify-content-center align-items-center">
-								<div class="wrapper d-flex justify-content-center align-items-center">
-									<a class="col-auto btn-dark rounded-circle play-btn mx-3" href="#">
+								<div
+									class="wrapper d-flex justify-content-center align-items-center"
+								>
+									<a
+										class="btn-dark rounded-circle play-btn mx-3 shadow-5-strong"
+										href="#"
+									>
 										<i class="fa fa-play"></i>
 									</a>
-									<span class="col-auto counter">70/128</span>
+									<span class="counter">70/128</span>
 								</div>
 							</h3>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+			<div>
+				<svg
+					class="waves"
+					xmlns="http://www.w3.org/2000/svg"
+					xmlns:xlink="http://www.w3.org/1999/xlink"
+					viewBox="0 24 150 28"
+					preserveAspectRatio="none"
+					shape-rendering="auto"
+				>
+					<defs>
+						<path
+							id="gentle-wave"
+							d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
+						/>
+					</defs>
+					<g class="parallax">
+						<use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+						<use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+						<use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+						<use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+					</g>
+				</svg>
+			</div>
+		</header>
 
+		<div class="container px-md-5">
+			<div class="row py-2 mx-md-5">
+				<div class="col-12 col-md-6 col-lg-4 mb-3">
+					<div class="card bg-dark shadow text-light text-center">
+						<i class="fa fa-play fa-4x text-danger"></i>
+						<p>اینجا همه چی خرابه !</p>
+					</div>
+				</div>
+				<div class="col-12 col-md-6 col-lg-4 mb-3">
+					<div class="card bg-dark shadow text-light text-center">
+						<i class="fa fa-play fa-4x text-danger"></i>
+						<p>اینجا همه چی خرابه !</p>
+					</div>
+				</div>
+				<div class="col-12 col-md-6 col-lg-4 mb-3">
+					<div class="card bg-dark shadow text-light text-center">
+						<i class="fa fa-play fa-4x text-danger"></i>
+						<p>اینجا همه چی خرابه !</p>
+					</div>
+				</div>
+				<div class="col-12 col-md-6 col-lg-4 mb-3">
+					<div class="card bg-dark shadow text-light text-center">
+						<i class="fa fa-play fa-4x text-danger"></i>
+						<p>اینجا همه چی خرابه !</p>
+					</div>
+				</div>
+				<div class="col-12 col-md-6 col-lg-4 mb-3">
+					<div class="card bg-dark shadow text-light text-center">
+						<i class="fa fa-play fa-4x text-danger"></i>
+						<p>اینجا همه چی خرابه !</p>
+					</div>
+				</div>
+				<div class="col-12 col-md-6 col-lg-4 mb-3">
+					<div class="card bg-dark shadow text-light text-center">
+						<i class="fa fa-play fa-4x text-danger"></i>
+						<p>اینجا همه چی خرابه !</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
