--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</button>
 		</div>
 		<div class="side-menu-overlay"></div>
-		<nav class="navbar navbar-light shadow-lg">
+		<nav class="navbar navbar-light shadow">
 			<div class="container-fluid">
 				<div class="wrapper">
 					<a href="#" class="icon"
@@ -111,7 +111,7 @@
 									class="wrapper d-flex justify-content-center align-items-center"
 								>
 									<a
-										class="btn-dark rounded-circle play-btn mx-3 shadow-5-strong"
+										class="btn-dark rounded-circle play-btn mx-3 shadow"
 										href="#"
 									>
 										<i class="fa fa-play"></i>
@@ -148,46 +148,210 @@
 			</div>
 		</header>
 
-		<div class="container px-md-5">
-			<div class="row py-2 mx-md-5">
-				<div class="col-12 col-md-6 col-lg-4 mb-3">
-					<div class="card bg-dark shadow text-light text-center">
-						<i class="fa fa-play fa-4x text-danger"></i>
-						<p>اینجا همه چی خرابه !</p>
+		<section class="my-5">
+			<div class="container px-md-5">
+				<div class="row py-5 mx-md-5 mb-3">
+					<div class="col-12 col-md-6 col-lg-4 mb-3">
+						<div class="card bg-dark shadow text-light text-center">
+							<div class="card-body">
+								<i class="fa fa-play fa-4x text-danger"></i>
+								<p>اینجا همه چی خرابه !</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4 mb-3">
+						<div class="card bg-dark shadow text-light text-center">
+							<div class="card-body">
+								<i class="fa fa-play fa-4x text-danger"></i>
+								<p>اینجا همه چی خرابه !</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4 mb-3">
+						<div class="card bg-dark shadow text-light text-center">
+							<div class="card-body">
+								<i class="fa fa-play fa-4x text-danger"></i>
+								<p>اینجا همه چی خرابه !</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4 mb-3">
+						<div class="card bg-dark shadow text-light text-center">
+							<div class="card-body">
+								<i class="fa fa-play fa-4x text-danger"></i>
+								<p>اینجا همه چی خرابه !</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4 mb-3">
+						<div class="card bg-dark shadow text-light text-center">
+							<div class="card-body">
+								<i class="fa fa-play fa-4x text-danger"></i>
+								<p>اینجا همه چی خرابه !</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4 mb-3">
+						<div class="card bg-dark shadow text-light text-center">
+							<div class="card-body">
+								<i class="fa fa-play fa-4x text-danger"></i>
+								<p>اینجا همه چی خرابه !</p>
+							</div>
+						</div>
 					</div>
 				</div>
-				<div class="col-12 col-md-6 col-lg-4 mb-3">
-					<div class="card bg-dark shadow text-light text-center">
-						<i class="fa fa-play fa-4x text-danger"></i>
-						<p>اینجا همه چی خرابه !</p>
+				<div class="row mb-5 mx-md-5 px-3">
+					<h3 class="text-center">آخرین اعلامیه ها</h3>
+
+					<div class="card bg-dark text-white my-2 text-left dis-message">
+						<h5 class="card-header">
+							<img src="assets/images/profile-photo-blank.jpg" alt="" />
+							<span class="tag">Founder</span>
+							<span class="user-name">MrAli</span>
+						</h5>
+						<div class="card-body">
+							لورم ایپسوم متن ساختگی با
+							<br />
+							لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده
+							از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و
+							سطرآنچنان که لازم است
+						</div>
+					</div>
+					<div class="card bg-dark text-white my-2 text-left dis-message">
+						<h5 class="card-header">
+							<img src="assets/images/profile-photo-blank.jpg" alt="" />
+							<span class="tag">Founder</span>
+							<span class="user-name">MrAli</span>
+						</h5>
+						<div class="card-body">
+							لورم ایپسوم متن ساختگی با
+							<br />
+							لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده
+							از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و
+							سطرآنچنان که لازم است
+						</div>
+					</div>
+					<div class="card bg-dark text-white my-2 text-left dis-message">
+						<h5 class="card-header">
+							<img src="assets/images/profile-photo-blank.jpg" alt="" />
+							<span class="tag">Founder</span>
+							<span class="user-name">MrAli</span>
+						</h5>
+						<div class="card-body">
+							لورم ایپسوم متن ساختگی با
+							<br />
+							لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده
+							از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و
+							سطرآنچنان که لازم است
+						</div>
+					</div>
+					<div class="card bg-dark text-white my-2 text-left dis-message">
+						<h5 class="card-header">
+							<img src="assets/images/profile-photo-blank.jpg" alt="" />
+							<span class="tag">Founder</span>
+							<span class="user-name">MrAli</span>
+						</h5>
+						<div class="card-body">
+							لورم ایپسوم متن ساختگی با
+							<br />
+							لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده
+							از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و
+							سطرآنچنان که لازم است
+						</div>
 					</div>
 				</div>
-				<div class="col-12 col-md-6 col-lg-4 mb-3">
-					<div class="card bg-dark shadow text-light text-center">
-						<i class="fa fa-play fa-4x text-danger"></i>
-						<p>اینجا همه چی خرابه !</p>
+				<div class="row mb-5 mx-md-5 px-3">
+					<h3 class="text-center">آخرین اپدیت ها</h3>
+
+					<div class="card bg-dark text-white my-2 text-left dis-message">
+						<h5 class="card-header">
+							<span> آخرین اپدیت </span>
+						</h5>
+						<div class="card-body">
+							لورم ایپسوم متن ساختگی با
+							<br />
+							لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده
+							از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و
+							سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای
+							متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه
+							درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با
+							نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان
+							خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید
+							داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان
+							رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات
+							پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+						</div>
 					</div>
-				</div>
-				<div class="col-12 col-md-6 col-lg-4 mb-3">
-					<div class="card bg-dark shadow text-light text-center">
-						<i class="fa fa-play fa-4x text-danger"></i>
-						<p>اینجا همه چی خرابه !</p>
+					<div class="card bg-dark text-white my-2 text-left dis-message">
+						<h5 class="card-header">
+							<span> آخرین اپدیت </span>
+						</h5>
+						<div class="card-body">
+							لورم ایپسوم متن ساختگی با
+							<br />
+							لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده
+							از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و
+							سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای
+							متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه
+							درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با
+							نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان
+							خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید
+							داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان
+							رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات
+							پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+						</div>
 					</div>
-				</div>
-				<div class="col-12 col-md-6 col-lg-4 mb-3">
-					<div class="card bg-dark shadow text-light text-center">
-						<i class="fa fa-play fa-4x text-danger"></i>
-						<p>اینجا همه چی خرابه !</p>
+					<div class="card bg-dark text-white my-2 text-left dis-message">
+						<h5 class="card-header">
+							<span> آخرین اپدیت </span>
+						</h5>
+						<div class="card-body">
+							لورم ایپسوم متن ساختگی با
+							<br />
+							لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده
+							از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و
+							سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای
+							متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه
+							درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با
+							نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان
+							خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید
+							داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان
+							رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات
+							پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+						</div>
 					</div>
-				</div>
-				<div class="col-12 col-md-6 col-lg-4 mb-3">
-					<div class="card bg-dark shadow text-light text-center">
-						<i class="fa fa-play fa-4x text-danger"></i>
-						<p>اینجا همه چی خرابه !</p>
+					<div class="card bg-dark text-white my-2 text-left dis-message">
+						<h5 class="card-header">
+							<span> آخرین اپدیت </span>
+						</h5>
+						<div class="card-body">
+							لورم ایپسوم متن ساختگی با
+							<br />
+							لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده
+							از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و
+							سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای
+							متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه
+							درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با
+							نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان
+							خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید
+							داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان
+							رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات
+							پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
+		<footer class="footer">
+			<div class="container px-5">
+				<div class="row mx-md-5 px-md-3">
+					<div class="footer-content text-white text-center py-2">
+						<span>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</span>
+						<i class="fa-regular fa-copyright"></i>
+					</div>
+				</div>
+			</div>
+		</footer>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
