Add close button for side Menu

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 			<button class="btn btn-dark shadow" type="button">
 				<i class="fab fa-steam"></i> ورود به اپ
 			</button>
+			<i class="fa fa-xmark close-button"></i>
 		</div>
 		<div class="side-menu-overlay"></div>
 		<nav class="navbar navbar-light shadow">
@@ -343,7 +344,7 @@
 			</div>
 		</section>
 		<footer class="footer">
-			<div class="container px-5">
+			<div class="container">
 				<div class="row mx-md-5 px-md-3">
 					<div class="footer-content text-white text-center py-2">
 						<span>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</span>
