--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<i class="fa fa-xmark close-button"></i>
 		</div>
 		<div class="side-menu-overlay"></div>
-		<nav class="navbar navbar-light shadow">
+		<nav class="navbar bg-light shadow fixed-top">
 			<div class="container-fluid">
 				<div class="wrapper">
 					<a href="#" class="icon"
@@ -95,7 +95,7 @@
 		</nav>
 		<header class="page-header">
 			<div class="page-header-content pt-5">
-				<div class="container">
+				<div class="container pt-5">
 					<div class="row align-items-center text-center">
 						<div class="col-12 col-md-6 header-image">
 							<img src="/assets/images/irrpChars.png" alt="#" />
