--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			referrerpolicy="no-referrer"
 		/>
 		<link rel="stylesheet" href="assets/styles/app.css" />
+		<link rel="stylesheet" href="/assets/styles/darkMode.css" />
 		<link rel="stylesheet" href="assets/styles/responsive.css" />
 		<link rel="shortcut icon" href="/assets/images/irp-icon.png" type="image/x-icon" />
 		<title>Iran RolePlay - FiveM</title>
@@ -149,8 +150,8 @@
 			</div>
 		</header>
 
-		<section class="my-5">
-			<div class="container px-md-5">
+		<section>
+			<div class="container px-md-5 py-5">
 				<div class="row py-5 mx-md-5 mb-3">
 					<div class="col-12 col-md-6 col-lg-4 mb-3">
 						<div class="card bg-dark shadow text-light text-center">
@@ -342,17 +343,17 @@
 					</div>
 				</div>
 			</div>
-		</section>
-		<footer class="footer">
-			<div class="container">
-				<div class="row mx-md-5 px-md-3">
-					<div class="footer-content text-white text-center py-2">
-						<span>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</span>
-						<i class="fa-regular fa-copyright"></i>
+			<footer class="footer">
+				<div class="container">
+					<div class="row">
+						<div class="footer-content text-white text-center py-2">
+							<span>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</span>
+							<i class="fa-regular fa-copyright"></i>
+						</div>
 					</div>
 				</div>
-			</div>
-		</footer>
+			</footer>
+		</section>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
