--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<i class="fa fa-xmark close-button"></i>
 		</div>
 		<div class="side-menu-overlay"></div>
-		<nav class="navbar bg-light shadow fixed-top">
+		<nav class="navbar shadow fixed-top">
 			<div class="container-fluid">
 				<div class="wrapper">
 					<a href="#" class="icon"
@@ -141,10 +141,10 @@
 						/>
 					</defs>
 					<g class="parallax">
-						<use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
-						<use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
-						<use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
-						<use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+						<use xlink:href="#gentle-wave" x="48" y="0" />
+						<use xlink:href="#gentle-wave" x="48" y="3" />
+						<use xlink:href="#gentle-wave" x="48" y="5" />
+						<use xlink:href="#gentle-wave" x="48" y="7" />
 					</g>
 				</svg>
 			</div>
@@ -154,7 +154,7 @@
 			<div class="container px-md-5 py-5">
 				<div class="row py-5 mx-md-5 mb-3">
 					<div class="col-12 col-md-6 col-lg-4 mb-3">
-						<div class="card bg-dark shadow text-light text-center">
+						<div class="card bg-dark text-light text-center">
 							<div class="card-body">
 								<i class="fa fa-play fa-4x text-danger"></i>
 								<p>اینجا همه چی خرابه !</p>
@@ -162,7 +162,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4 mb-3">
-						<div class="card bg-dark shadow text-light text-center">
+						<div class="card bg-dark text-light text-center">
 							<div class="card-body">
 								<i class="fa fa-play fa-4x text-danger"></i>
 								<p>اینجا همه چی خرابه !</p>
@@ -170,7 +170,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4 mb-3">
-						<div class="card bg-dark shadow text-light text-center">
+						<div class="card bg-dark text-light text-center">
 							<div class="card-body">
 								<i class="fa fa-play fa-4x text-danger"></i>
 								<p>اینجا همه چی خرابه !</p>
@@ -178,7 +178,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4 mb-3">
-						<div class="card bg-dark shadow text-light text-center">
+						<div class="card bg-dark text-light text-center">
 							<div class="card-body">
 								<i class="fa fa-play fa-4x text-danger"></i>
 								<p>اینجا همه چی خرابه !</p>
@@ -186,7 +186,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4 mb-3">
-						<div class="card bg-dark shadow text-light text-center">
+						<div class="card bg-dark text-light text-center">
 							<div class="card-body">
 								<i class="fa fa-play fa-4x text-danger"></i>
 								<p>اینجا همه چی خرابه !</p>
@@ -194,7 +194,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4 mb-3">
-						<div class="card bg-dark shadow text-light text-center">
+						<div class="card bg-dark text-light text-center">
 							<div class="card-body">
 								<i class="fa fa-play fa-4x text-danger"></i>
 								<p>اینجا همه چی خرابه !</p>
@@ -344,8 +344,8 @@
 				</div>
 			</div>
 			<footer class="footer">
-				<div class="container">
-					<div class="row">
+				<div class="container px-md-5">
+					<div class="row px-md-5">
 						<div class="footer-content text-white text-center py-2">
 							<span>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</span>
 							<i class="fa-regular fa-copyright"></i>
