--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					>
 				</li>
 			</ul>
-			<button class="btn btn-dark shadow" type="button">
+			<button class="btn btn-dark" type="button">
 				<i class="fab fa-steam"></i> ورود به اپ
 			</button>
 			<i class="fa fa-xmark close-button"></i>
@@ -84,7 +84,7 @@
 						>
 					</li>
 				</ul>
-				<button class="btn btn-dark shadow m-2" type="button">
+				<button class="btn btn-dark m-2" type="button">
 					<i class="fab fa-steam"></i> ورود به اپ
 				</button>
 				<button class="btn btn-light menu-btn shadow">
@@ -95,7 +95,7 @@
 			</div>
 		</nav>
 		<header class="page-header">
-			<div class="page-header-content pt-5">
+			<div class="page-header-content py-5">
 				<div class="container pt-5">
 					<div class="row align-items-center text-center">
 						<div class="col-12 col-md-6 header-image">
