fixed header image and darkmode bug

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 			referrerpolicy="no-referrer"
 		/>
 		<link rel="stylesheet" href="assets/styles/app.css" />
-		<link rel="stylesheet" href="/assets/styles/darkMode.css" />
+		<link rel="stylesheet" href="assets/styles/darkMode.css" />
 		<link rel="stylesheet" href="assets/styles/responsive.css" />
-		<link rel="shortcut icon" href="/assets/images/irp-icon.png" type="image/x-icon" />
+		<link rel="shortcut icon" href="assets/images/irp-icon.png" type="image/x-icon" />
 		<title>Iran RolePlay - FiveM</title>
 	</head>
 
@@ -99,7 +99,7 @@
 				<div class="container pt-5">
 					<div class="row align-items-center text-center">
 						<div class="col-12 col-md-6 header-image">
-							<img src="/assets/images/irrpChars.png" alt="#" />
+							<img src="assets/images/irrpChars.png" alt="#" />
 						</div>
 						<div class="col-12 col-md-6 text-light header-descroption">
 							<h1>ایران رول پلی</h1>
