add new logo image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<body>
 		<div class="side-menu">
 			<a href="#" class="icon mx-auto my-2"
-				><img src="https://iranroleplay.com/images/logo.png" alt="Irrp-Icon"
+				><img src="assets/images/logo.png" alt="Irrp-Icon"
 			/></a>
 
 			<ul class="m-0 p-0">
@@ -60,7 +60,7 @@
 			<div class="container-fluid">
 				<div class="wrapper">
 					<a href="#" class="icon"
-						><img src="https://iranroleplay.com/images/logo.png" alt="Irrp-Icon"
+						><img src="assets/images/logo.png" alt="Irrp-Icon"
 					/></a>
 					<a href="#" class="dark-icon"><i class="fa-solid fa-circle-half-stroke"></i></a>
 				</div>
