Add Scroll indicator

--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
 					<span class="line"></span>
 				</button>
 			</div>
+			<div class="progress-container">
+				<div class="progress-bar"></div>
+			</div>
 		</nav>
 		<header class="page-header">
 			<div class="page-header-content py-5">
